tests/baselines/reference/subclassThisTypeAssignable.errors.txt
tests/cases/compiler/tile1.ts(2,30): error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
tests/cases/compiler/tile1.ts(6,81): error TS2744: Type parameter defaults can only reference previously declared type parameters.
tests/cases/compiler/tile1.ts(11,40): error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.


==== tests/cases/compiler/tile1.ts (3 errors) ====
    interface Lifecycle<Attrs, State> {
    	oninit?(vnode: Vnode<Attrs, State>): number;
    	                            ~~~~~
!!! error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
!!! related TS2797 tests/cases/compiler/tile1.ts:1:28: This type parameter likely needs an `extends object` constraint.
    	[_: number]: any;
    }
    
    interface Vnode<Attrs, State extends Lifecycle<Attrs, State> = Lifecycle<Attrs, State>> {
                                                                                    ~~~~~
!!! error TS2744: Type parameter defaults can only reference previously declared type parameters.
    	tag: Component<Attrs, State>;
    }
    
    interface Component<Attrs, State> {
    	view(this: State, vnode: Vnode<Attrs, State>): number;
    	                                      ~~~~~
!!! error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
!!! related TS2797 tests/cases/compiler/tile1.ts:10:28: This type parameter likely needs an `extends object` constraint.
    }
    
    interface ClassComponent<A> extends Lifecycle<A, ClassComponent<A>> {
    	oninit?(vnode: Vnode<A, this>): number;
    	view(vnode: Vnode<A, this>): number;
    }
    
    interface MyAttrs { id: number }
    class C implements ClassComponent<MyAttrs> {
    	view(v: Vnode<MyAttrs>) { return 0; }
    }
    
    const test8: ClassComponent<any> = new C();
==== tests/cases/compiler/file1.js (0 errors) ====
    /** @type {ClassComponent<any>} */
    const test9 = new C();
    